--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
  <html>
   <head lang="zh-CN">
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"  />
-   <script type="text/javascript" src="lib/lodash-2.4.1/lodash.compat.js"></script>
-   <script type="text/javascript" src="lib/jquery-2.1.3.js"></script>
-   <script src="JS/model/question.js" type="text/javascript"></script>
-   <script src="JS/model/answer.js" type="text/javascript"></script>
-   <script src="JS/main.js" type="text/javascript"></script>
-   <script src="JS/model/fill.js" type="text/javascript"></script>
-   <script src="JS/model/choice.js" type="text/javascript"></script>
-   <script src="JS/model/multiple-choice.js" type="text/javascript"></script>
-   <script src="JS/model/judge.js" type="text/javascript"></script>
-   <script src="JS/model/short-answer.js" type="text/javascript"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"  />
+    <script type="text/javascript" src="lib/lodash-2.4.1/lodash.compat.js"></script>
+    <script type="text/javascript" src="lib/jquery-2.1.3.js"></script>
+    <script src="JS/model/question.js" type="text/javascript"></script>
+    <script src="JS/model/answer.js" type="text/javascript"></script>
+    <script src="JS/main.js" type="text/javascript"></script>
+    <script src="JS/model/fill.js" type="text/javascript"></script>
+    <script src="JS/model/choice.js" type="text/javascript"></script>
+    <script src="JS/model/multiple-choice.js" type="text/javascript"></script>
+    <script src="JS/model/judge.js" type="text/javascript"></script>
+    <script src="JS/model/short-answer.js" type="text/javascript"></script>
 
-   <link rel="stylesheet" href="lib/bootstrap-3.2.0-dist/css/bootstrap.min.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="lib/bootstrap-3.2.0-dist/css/bootstrap.min.css" media="screen" title="no title" charset="utf-8">
   <title>
     test-paper
   </title>
@@ -30,21 +30,20 @@
               <hr />
             </div>
             <div>
-                <p> 考试科目：<u>统一建模语言 UML</u>
-                    时间：<u>100分钟</u>
-                    得分：<u><span id="count"></span></u>
-                </p>
-              </div>
-              <div class="text-dange">
-                  班级(*)：<label for="class"></label>
-                  <input type="text" style="border-color:#C6E2FF;"id="class"/>
-                  学号(*)：<label for="id"></label>
-                  <input type="text" style="border-color:#C6E2FF;" id="id"/>
-                  姓名(*)：<label for="name"></label>
-                  <input type="text" style="border-color:#C6E2FF;" id="name"/>
-                  <div style="color:#F00"><b>(带*为必填项)</b>
-                  </div>
-              </div>
+              <p> 考试科目：<u>统一建模语言 UML</u>
+                  时间：<u>100分钟</u>
+                  得分：<u><span id="count"></span></u>
+              </p>
+            </div>
+            <div class="text-dange">
+              班级(*)：<label for="class"></label>
+              <input type="text" style="border-color:#C6E2FF;"id="class"/>
+              学号(*)：<label for="id"></label>
+              <input type="text" style="border-color:#C6E2FF;" id="id"/>
+              姓名(*)：<label for="name"></label>
+              <input type="text" style="border-color:#C6E2FF;" id="name"/>
+              <div style="color:#F00"><b>(带*为必填项)</b></div>
+            </div>
           </div>
         </header>
       </form>
@@ -62,7 +61,7 @@
                 <div class="form-inline">
                   <input type="text" id="1_1" name="1_1" size="12px"class="form-control"/>
                 </div>
-              </div>
+            </div>
           </li>
           <li  class="">
             <div class="form-group">
@@ -76,6 +75,7 @@
           </li>
         </ol>
     </div>
+
     <div class="panel panel-default form-group">
       <div class="panel panel-default form-group" style="background-color:rgb(248,248,248)">
         <span class="glyphicon glyphicon-sort-by-attributes">
@@ -133,6 +133,7 @@
         </ol>
       </div>
     </div>
+
     <div class="panel panel-default form-group">
       <div class="panel panel-default form-group"style="background-color:rgb(248,248,248)">
         <span class="glyphicon glyphicon-sort-by-attributes">
@@ -141,55 +142,56 @@
       </div>
       <div class="panel-body">
         <ol>
-            <li>
-              <div class="form-group">
-                <label class="control-label">
-                  用例的粒度分为以下哪三种。<br />
-                </label>
-                <div class="radio">
-                  <input type="checkbox" id="3_1_1"name="3_1" value="A"/>
-                  <label for="3_1_1">（A）概述级、</label><br/>
-                </div>
-                <div class="radio">
-                  <input type="checkbox" id="3_1_2"name="3_1" value="B"/>
-                  <label for="3_1_2">（B）需求级</label><br />
-                </div>
-                <div class="radio">
-                  <input type="checkbox" id="3_1_3"name="3_1" value="C"/>
-                  <label for="3_1_3">（C）用户目标级、</label><br />
-                </div>
-                <div class="radio">
-                  <input type="checkbox" id="3_1_4"name="3_1" value="D"/>
-                  <label for="3_1_4">（D）子功能级,</label><br/>
-                </div>
+          <li>
+            <div class="form-group">
+              <label class="control-label">
+                用例的粒度分为以下哪三种。<br />
+              </label>
+              <div class="radio">
+                <input type="checkbox" id="3_1_1"name="3_1" value="A"/>
+                <label for="3_1_1">（A）概述级、</label><br/>
               </div>
-            </li>
-            <li>
-              <div class="form-group">
-                <label class="control-label">
-                  类图由以下哪三部分组成。<br />
-                </label>
-                <div class="radio">
-                  <input type="checkbox" id="3_2_1"name="3_2" value="A"/>
-                  <label for="3_2_1">（A）名称(Name)</label><br />
-                </div>
-                <div class="radio">
-                  <input type="checkbox" id="3_2_2"name="3_2" value="B"/>
-                  <label for="3_2_2">（B）属性(Attribute)</label><br />
-                </div>
-                <div class="radio">
-                  <input type="checkbox" id="3_2_3"name="3_2" value="C"/>
-                  <label for="3_2_3">（C）操作(Operation)</label><br />
-                </div>
-                <div class="radio">
-                  <input type="checkbox" id="3_2_4"name="3_2" value="D"/>
-                  <label for="3_2_4">（D）方法（Function）</label><br />
-                </div>
+              <div class="radio">
+                <input type="checkbox" id="3_1_2"name="3_1" value="B"/>
+                <label for="3_1_2">（B）需求级</label><br />
               </div>
-            </li>
+              <div class="radio">
+                <input type="checkbox" id="3_1_3"name="3_1" value="C"/>
+                <label for="3_1_3">（C）用户目标级、</label><br />
+              </div>
+              <div class="radio">
+                <input type="checkbox" id="3_1_4"name="3_1" value="D"/>
+                <label for="3_1_4">（D）子功能级,</label><br/>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="form-group">
+              <label class="control-label">
+                类图由以下哪三部分组成。<br />
+              </label>
+              <div class="radio">
+                <input type="checkbox" id="3_2_1"name="3_2" value="A"/>
+                <label for="3_2_1">（A）名称(Name)</label><br />
+              </div>
+              <div class="radio">
+                <input type="checkbox" id="3_2_2"name="3_2" value="B"/>
+                <label for="3_2_2">（B）属性(Attribute)</label><br />
+              </div>
+              <div class="radio">
+                <input type="checkbox" id="3_2_3"name="3_2" value="C"/>
+                <label for="3_2_3">（C）操作(Operation)</label><br />
+              </div>
+              <div class="radio">
+                <input type="checkbox" id="3_2_4"name="3_2" value="D"/>
+                <label for="3_2_4">（D）方法（Function）</label><br />
+              </div>
+            </div>
+          </li>
         </ol>
+      </div>
     </div>
-  </div>
+
     <div class="panel panel-default form-group ">
       <div class="panel panel-default form-group"style="background-color:rgb(248,248,248)">
         <span class="glyphicon glyphicon-sort-by-attributes">
@@ -203,15 +205,15 @@
               <label class="control-label">
                 用例图只是用于和客户交流和沟通的，用于确定需求。
               </label>
-            <div class="radio">
-              <input type="radio" id="4_1_1"name="4_1" value="Y" />
-              <label for="4_1_1">YES</label>
+              <div class="radio">
+                <input type="radio" id="4_1_1"name="4_1" value="Y" />
+                <label for="4_1_1">YES</label>
+              </div>
+              <div class="radio">
+                <input type="radio" id="4_1_2"name="4_1" value="N" />
+                <label for="4_1_2">NO</label>
+              </div>
             </div>
-            <div class="radio">
-              <input type="radio" id="4_1_2"name="4_1" value="N" />
-              <label for="4_1_2">NO</label>
-            </div>
-          </div>
           </li>
           <li>
             <div class="form-group">
@@ -231,6 +233,7 @@
         </ol>
       </div>
     </div>
+
     <div class="panel panel-default form-group ">
       <div class="panel panel-default form-group"style="background-color:rgb(248,248,248)">
         <span class="glyphicon glyphicon-sort-by-attributes">
@@ -243,16 +246,17 @@
             <div class="form-group">
               <label for="5_1" class="control-label">简述什么是模型以及模型的表现形式?</label></br>
                 <textarea rows = "5" cols = "40" id ="5_1" name="5_1" ></textarea>
-            </li>
-          </div>
+            </div>
+          </li>
         </ol>
+
         <div class="row">
           <div class="col-md-12 text-center">
             <div  class="btn-lg glyphicon glyphicon-user"style="border:5px dotted red;color:gray">
               <input type="button" value="提交"onclick=" printScore();"/>
             </div>
           </div>
-      </div>
+        </div>
       </div>
     </div>
   </div>
