--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"  />
+
     <script type="text/javascript" src="lib/lodash-2.4.1/lodash.compat.js"></script>
     <script type="text/javascript" src="lib/jquery-2.1.3.js"></script>
+
     <script src="JS/model/question.js" type="text/javascript"></script>
     <script src="JS/model/answer.js" type="text/javascript"></script>
     <script src="JS/main.js" type="text/javascript"></script>
@@ -16,17 +18,20 @@
     <script src="JS/model/short-answer.js" type="text/javascript"></script>
 
     <link rel="stylesheet" href="lib/bootstrap-3.2.0-dist/css/bootstrap.min.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="CSS/main.css">
   <title>
+
     test-paper
   </title>
   </head>
   <body>
+    <div class="container">
     <div class="panel panel-default">
       <form action="" method="post" autocomplete="off">
         <header>
           <div class="panel panel-default text-center">
-            <div class="text-center"style="background-color:rgb(248,248,248)">
-              <h1><b >统一建模语言理论测试</b></p></h1>
+            <div class="text-center style">
+              <h1>统一建模语言理论测试</h1>
               <hr />
             </div>
             <div>
@@ -37,7 +42,7 @@
             </div>
             <div class="text-dange">
               班级(*)：<label for="class"></label>
-              <input type="text" style="border-color:#C6E2FF;"id="class"/>
+              <input type="text" style="border-color:#C6E2FF;" id="class"/>
               学号(*)：<label for="id"></label>
               <input type="text" style="border-color:#C6E2FF;" id="id"/>
               姓名(*)：<label for="name"></label>
@@ -46,30 +51,29 @@
             </div>
           </div>
         </header>
-      </form>
 
     <div class="panel panel-default form-group ">
-      <div class="panel panel-default form-group " style="background-color:rgb(248,248,248)">
+      <div class="panel panel-default form-group style">
         <span class="glyphicon glyphicon-sort-by-attributes">
           <h3 >一、填空题 <small>(第1小题10分，第2小题每空5分)</small></h3>
         </span>
       </div>
         <ol>
-          <li class="">
+          <li>
             <div class="form-group">
               <label for="1_1">UML 的中文全称是：</label>
                 <div class="form-inline">
-                  <input type="text" id="1_1" name="1_1" size="12px"class="form-control"/>
+                  <input type="text" id="1_1" name="1_1" size="12px" class="form-control"/>
                 </div>
             </div>
           </li>
-          <li  class="">
+          <li>
             <div class="form-group">
               <label for="2_1">对象最突出的特征是：</label>
                 <div class="form-inline">
-                  <input type="text" id="2_1" name="1_2"size="12px"class="form-control">
-                  <input type="text" id="2_2" name="1_2"size="12px"class="form-control">
-                  <input type="text" id="2_3" name="1_2"size="12px"class="form-control">
+                  <input type="text" id="2_1" name="1_2" size="12px" class="form-control">
+                  <input type="text" id="2_2" name="1_2" size="12px" class="form-control">
+                  <input type="text" id="2_3" name="1_2" size="12px" class="form-control">
                 </div>
             </div>
           </li>
@@ -77,7 +81,7 @@
     </div>
 
     <div class="panel panel-default form-group">
-      <div class="panel panel-default form-group" style="background-color:rgb(248,248,248)">
+      <div class="panel panel-default form-group style">
         <span class="glyphicon glyphicon-sort-by-attributes">
           <h3>二、选择题<small>(每小题10分)</samll></h3>
         </span>
@@ -94,15 +98,15 @@
                 <label for="2_1_1">（A）UML 就是软件工程</label><br />
               </div>
               <div class="radio">
-                <input type="radio"id="2_1_2"name="2_1_1" value="B" />
+                <input type="radio" id="2_1_2" name="2_1_1" value="B" />
                 <label for="2_1_2">（B）UML 参与到软件工程中软件开发过程的几个阶段</label><br />
               </div>
               <div class="radio">
-                <input type="radio" id="2_1_3"name="2_1_1" value="C" />
+                <input type="radio" id="2_1_3" name="2_1_1" value="C" />
                 <label for="2_1_3">（C）UML 与软件工程无关</label><br />
               </div>
               <div class="radio">
-                <input type="radio" id="2_1_4"name="2_1_1" value="D" />
+                <input type="radio" id="2_1_4" name="2_1_1" value="D" />
                 <label for="2_1_4">（D）UML 是软件工程的一部分</label><br />
               </div>
             </div>
@@ -113,19 +117,19 @@
                 Java 语言支持：<br/>
               </label>
               <div class="radio">
-                <input type="radio" id="2_2_1"name="2_2_1" value="A" />
+                <input type="radio" id="2_2_1" name="2_2_1" value="A" />
                 <label for="2_2_1">（A）单继承</label><br />
               </div>
               <div class="radio">
-                <input type="radio" id="2_2_2"name="2_2_1" value="B" />
+                <input type="radio" id="2_2_2" name="2_2_1" value="B" />
                 <label for="2_2_2">（B）多继承</label><br />
               </div>
               <div class="radio">
-                <input type="radio" id="2_2_3"name="2_2_1" value="C" />
+                <input type="radio" id="2_2_3" name="2_2_1" value="C" />
                 <label for="2_2_3">（C）单继承和多继承都支持</label><br />
               </div>
               <div class="radio">
-                <input type="radio" id="2_2_4"name="2_2_1" value="D" />
+                <input type="radio" id="2_2_4" name="2_2_1" value="D" />
                 <label for="2_2_4">（D）单继承和多继承都不支持</label><br />
               </div>
             </div>
@@ -135,7 +139,7 @@
     </div>
 
     <div class="panel panel-default form-group">
-      <div class="panel panel-default form-group"style="background-color:rgb(248,248,248)">
+      <div class="panel panel-default form-group style">
         <span class="glyphicon glyphicon-sort-by-attributes">
           <h3>三、多选题<small>(每小题10分)</small></h3>
         </span>
@@ -148,19 +152,19 @@
                 用例的粒度分为以下哪三种。<br />
               </label>
               <div class="radio">
-                <input type="checkbox" id="3_1_1"name="3_1" value="A"/>
+                <input type="checkbox" id="3_1_1" name="3_1" value="A"/>
                 <label for="3_1_1">（A）概述级、</label><br/>
               </div>
               <div class="radio">
-                <input type="checkbox" id="3_1_2"name="3_1" value="B"/>
+                <input type="checkbox" id="3_1_2" name="3_1" value="B"/>
                 <label for="3_1_2">（B）需求级</label><br />
               </div>
               <div class="radio">
-                <input type="checkbox" id="3_1_3"name="3_1" value="C"/>
+                <input type="checkbox" id="3_1_3" name="3_1" value="C"/>
                 <label for="3_1_3">（C）用户目标级、</label><br />
               </div>
               <div class="radio">
-                <input type="checkbox" id="3_1_4"name="3_1" value="D"/>
+                <input type="checkbox" id="3_1_4" name="3_1" value="D"/>
                 <label for="3_1_4">（D）子功能级,</label><br/>
               </div>
             </div>
@@ -171,19 +175,19 @@
                 类图由以下哪三部分组成。<br />
               </label>
               <div class="radio">
-                <input type="checkbox" id="3_2_1"name="3_2" value="A"/>
+                <input type="checkbox" id="3_2_1" name="3_2" value="A"/>
                 <label for="3_2_1">（A）名称(Name)</label><br />
               </div>
               <div class="radio">
-                <input type="checkbox" id="3_2_2"name="3_2" value="B"/>
+                <input type="checkbox" id="3_2_2" name="3_2" value="B"/>
                 <label for="3_2_2">（B）属性(Attribute)</label><br />
               </div>
               <div class="radio">
-                <input type="checkbox" id="3_2_3"name="3_2" value="C"/>
+                <input type="checkbox" id="3_2_3" name="3_2" value="C"/>
                 <label for="3_2_3">（C）操作(Operation)</label><br />
               </div>
               <div class="radio">
-                <input type="checkbox" id="3_2_4"name="3_2" value="D"/>
+                <input type="checkbox" id="3_2_4" name="3_2" value="D"/>
                 <label for="3_2_4">（D）方法（Function）</label><br />
               </div>
             </div>
@@ -193,7 +197,7 @@
     </div>
 
     <div class="panel panel-default form-group ">
-      <div class="panel panel-default form-group"style="background-color:rgb(248,248,248)">
+      <div class="panel panel-default form-group style">
         <span class="glyphicon glyphicon-sort-by-attributes">
           <h3>四、判断题<small>(每小题10分)</small></h3>
         </span>
@@ -206,11 +210,11 @@
                 用例图只是用于和客户交流和沟通的，用于确定需求。
               </label>
               <div class="radio">
-                <input type="radio" id="4_1_1"name="4_1" value="Y" />
+                <input type="radio" id="4_1_1" name="4_1" value="Y" />
                 <label for="4_1_1">YES</label>
               </div>
               <div class="radio">
-                <input type="radio" id="4_1_2"name="4_1" value="N" />
+                <input type="radio" id="4_1_2" name="4_1" value="N" />
                 <label for="4_1_2">NO</label>
               </div>
             </div>
@@ -221,11 +225,11 @@
                 在状态图中，终止状态在一个状态图中允许有任意多个。
               </label>
               <div class="radio">
-                <input type="radio" id="4_2_1"name="4_2" value="Y" />
+                <input type="radio" id="4_2_1" name="4_2" value="Y" />
                 <label for="4_2_1">YES</label>
               </div>
               <div class="radio">
-                <input type="radio" id="4_2_2"name="4_2" value="N" />
+                <input type="radio" id="4_2_2" name="4_2" value="N" />
                 <label for="4_2_2">NO</label>
               </div>
             </div>
@@ -235,7 +239,7 @@
     </div>
 
     <div class="panel panel-default form-group ">
-      <div class="panel panel-default form-group"style="background-color:rgb(248,248,248)">
+      <div class="panel panel-default form-group" style="background-color:rgb(248,248,248)">
         <span class="glyphicon glyphicon-sort-by-attributes">
           <h3>五、简答题<small>(每小题15分)</small></h3>
         </span>
@@ -252,13 +256,15 @@
 
         <div class="row">
           <div class="col-md-12 text-center">
-            <div  class="btn-lg glyphicon glyphicon-user"style="border:5px dotted red;color:gray">
-              <input type="button" value="提交"onclick=" printScore();"/>
+            <div  class="btn-lg glyphicon glyphicon-user">
+              <input type="submit" value="提交" onclick="return printScore();"/>
             </div>
           </div>
         </div>
       </div>
     </div>
+  </form>
   </div>
+</div>
  </body>
 </html>
