--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
                     得分：<u><span id="count"></span></u>
                 </p>
               </div>
-              <div class="text-dange">
+              <div class="text-dange ">
                 班级(*)：<label for="class"></label>
-                <input type="text" style="border-color:#C6E2FF;" id="class"/>
+                <input type="text" id="class" class="color"/>
                 学号(*)：<label for="id"></label>
-                <input type="text" style="border-color:#C6E2FF;" id="id"/>
+                <input type="text" id="id" class="color"/>
                 姓名(*)：<label for="name"></label>
-                <input type="text" style="border-color:#C6E2FF;" id="name"/>
-                <div style="color:#F00"><b>(带*为必填项)</b></div>
+                <input type="text" id="name" class="color"/>
+                <div class="color1"><b>(带*为必填项)</b></div>
               </div>
             </div>
           </header>
@@ -93,43 +93,59 @@
                     UML 与软件工程的关系是：<br/>
                   </label>
                   <div class="radio">
-                    <input type="radio" id="2_1_1" name="2_1_1" value="A" />
-                    <label for="2_1_1">（A）UML 就是软件工程</label><br />
+                    <label for="2_1_1">
+                      <input type="radio" id="2_1_1" name="2_1_1" value="A">
+                        （A）UML 就是软件工程
+                    </label><br />
                   </div>
                   <div class="radio">
-                    <input type="radio" id="2_1_2" name="2_1_1" value="B" />
-                    <label for="2_1_2">（B）UML 参与到软件工程中软件开发过程的几个阶段</label><br />
+                    <label for="2_1_2">
+                      <input type="radio" id="2_1_2" name="2_1_1" value="B" />
+                        （B）UML 参与到软件工程中软件开发过程的几个阶段</label><br />
                   </div>
                   <div class="radio">
-                    <input type="radio" id="2_1_3" name="2_1_1" value="C" />
-                    <label for="2_1_3">（C）UML 与软件工程无关</label><br />
+                    <label for="2_1_3">
+                      <input type="radio" id="2_1_3" name="2_1_1" value="C" />
+                      （C）UML 与软件工程无关
+                      </label><br />
                   </div>
                   <div class="radio">
-                    <input type="radio" id="2_1_4" name="2_1_1" value="D" />
-                    <label for="2_1_4">（D）UML 是软件工程的一部分</label><br />
+                    <label for="2_1_4">
+                      <input type="radio" id="2_1_4" name="2_1_1" value="D" />
+                        （D）UML 是软件工程的一部分
+                    </label><br />
                   </div>
                 </div>
               </li>
+
               <li>
                 <div class="form-group">
                   <label class="control-label">
                     Java 语言支持：<br/>
                   </label>
                   <div class="radio">
-                    <input type="radio" id="2_2_1" name="2_2_1" value="A" />
-                    <label for="2_2_1">（A）单继承</label><br />
+                    <label for="2_2_1">
+                      <input type="radio" id="2_2_1" name="2_2_1" value="A" />
+                        （A）单继承
+                    </label><br />
                   </div>
                   <div class="radio">
-                    <input type="radio" id="2_2_2" name="2_2_1" value="B" />
-                    <label for="2_2_2">（B）多继承</label><br />
+                    <label for="2_2_2">
+                      <input type="radio" id="2_2_2" name="2_2_1" value="B" />
+                        （B）多继承
+                    </label><br />
                   </div>
                   <div class="radio">
-                    <input type="radio" id="2_2_3" name="2_2_1" value="C" />
-                    <label for="2_2_3">（C）单继承和多继承都支持</label><br />
+                    <label for="2_2_3">
+                      <input type="radio" id="2_2_3" name="2_2_1" value="C" />
+                        （C）单继承和多继承都支持
+                    </label><br />
                   </div>
                   <div class="radio">
-                    <input type="radio" id="2_2_4" name="2_2_1" value="D" />
-                    <label for="2_2_4">（D）单继承和多继承都不支持</label><br />
+                    <label for="2_2_4">
+                      <input type="radio" id="2_2_4" name="2_2_1" value="D" />
+                        （D）单继承和多继承都不支持
+                    </label><br />
                   </div>
                 </div>
               </li>
@@ -151,20 +167,28 @@
                     用例的粒度分为以下哪三种。<br />
                   </label>
                   <div class="radio">
-                    <input type="checkbox" id="3_1_1" name="3_1" value="A"/>
-                    <label for="3_1_1">（A）概述级、</label><br/>
+                    <label for="3_1_1">
+                      <input type="checkbox" id="3_1_1" name="3_1" value="A"/>
+                        （A）概述级、
+                    </label><br/>
                   </div>
                   <div class="radio">
-                    <input type="checkbox" id="3_1_2" name="3_1" value="B"/>
-                    <label for="3_1_2">（B）需求级</label><br />
+                    <label for="3_1_2">
+                      <input type="checkbox" id="3_1_2" name="3_1" value="B"/>
+                        （B）需求级
+                    </label><br />
                   </div>
                   <div class="radio">
-                    <input type="checkbox" id="3_1_3" name="3_1" value="C"/>
-                    <label for="3_1_3">（C）用户目标级、</label><br />
+                    <label for="3_1_3">
+                      <input type="checkbox" id="3_1_3" name="3_1" value="C"/>
+                        （C）用户目标级、
+                    </label><br />
                   </div>
                   <div class="radio">
-                    <input type="checkbox" id="3_1_4" name="3_1" value="D"/>
-                    <label for="3_1_4">（D）子功能级,</label><br/>
+                    <label for="3_1_4">
+                      <input type="checkbox" id="3_1_4" name="3_1" value="D"/>
+                        （D）子功能级,
+                    </label><br/>
                   </div>
                 </div>
               </li>
@@ -174,20 +198,28 @@
                     类图由以下哪三部分组成。<br />
                   </label>
                   <div class="radio">
-                    <input type="checkbox" id="3_2_1" name="3_2" value="A"/>
-                    <label for="3_2_1">（A）名称(Name)</label><br />
+                    <label for="3_2_1">
+                      <input type="checkbox" id="3_2_1" name="3_2" value="A"/>
+                        （A）名称(Name)
+                    </label><br />
                   </div>
                   <div class="radio">
-                    <input type="checkbox" id="3_2_2" name="3_2" value="B"/>
-                    <label for="3_2_2">（B）属性(Attribute)</label><br />
+                    <label for="3_2_2">
+                      <input type="checkbox" id="3_2_2" name="3_2" value="B"/>
+                        （B）属性(Attribute)
+                    </label><br />
                   </div>
                   <div class="radio">
-                    <input type="checkbox" id="3_2_3" name="3_2" value="C"/>
-                    <label for="3_2_3">（C）操作(Operation)</label><br />
+                    <label for="3_2_3">
+                      <input type="checkbox" id="3_2_3" name="3_2" value="C"/>
+                        （C）操作(Operation)
+                    </label><br />
                   </div>
                   <div class="radio">
-                    <input type="checkbox" id="3_2_4" name="3_2" value="D"/>
-                    <label for="3_2_4">（D）方法（Function）</label><br />
+                    <label for="3_2_4">
+                      <input type="checkbox" id="3_2_4" name="3_2" value="D"/>
+                        （D）方法（Function）
+                    </label><br />
                   </div>
                 </div>
               </li>
@@ -209,12 +241,16 @@
                     用例图只是用于和客户交流和沟通的，用于确定需求。
                   </label>
                   <div class="radio">
-                    <input type="radio" id="4_1_1" name="4_1" value="Y" />
-                    <label for="4_1_1">YES</label>
+                    <label for="4_1_1">
+                      <input type="radio" id="4_1_1" name="4_1" value="Y" />
+                        YES
+                    </label>
                   </div>
                   <div class="radio">
-                    <input type="radio" id="4_1_2" name="4_1" value="N" />
-                    <label for="4_1_2">NO</label>
+                    <label for="4_1_2">
+                      <input type="radio" id="4_1_2" name="4_1" value="N" />
+                        NO
+                    </label>
                   </div>
                 </div>
               </li>
@@ -225,12 +261,17 @@
                     在状态图中，终止状态在一个状态图中允许有任意多个。
                   </label>
                   <div class="radio">
-                    <input type="radio" id="4_2_1" name="4_2" value="Y" />
-                    <label for="4_2_1">YES</label>
+                    <label for="4_2_1">
+                      <input type="radio" id="4_2_1" name="4_2" value="Y" />
+                        YES
+                    </label>
                   </div>
+
                   <div class="radio">
-                    <input type="radio" id="4_2_2" name="4_2" value="N" />
-                    <label for="4_2_2">NO</label>
+                    <label for="4_2_2">
+                      <input type="radio" id="4_2_2" name="4_2" value="N" />
+                        NO
+                    </label>
                   </div>
                 </div>
               </li>
@@ -249,7 +290,7 @@
               <li>
                 <div class="form-group">
                   <label for="5_1" class="control-label">简述什么是模型以及模型的表现形式?</label></br>
-                    <textarea rows = "5" cols = "40" id ="5_1" name="5_1" ></textarea>
+                    <textarea rows = "5" cols = "40" id ="5_1" name="5_1" class="form-control" ></textarea>
                 </div>
               </li>
             </ol>
